--- a/public_html/HelloDjango/templates/create_application.html
+++ b/public_html/HelloDjango/templates/create_application.html
@@ -105,7 +105,7 @@
 
 {% block bottom_panel %}
 <div class="input-group d-flex justify-content-center align-items-center">
-  <a href="{% url 'application_list' CH_DAY %}" class="btn btn-outline-primary active  col-auto m-1" aria-current="page">Отмена</a>
+  <a href="{% url 'application_list' cw_day %}" class="btn btn-outline-primary active  col-auto m-1" aria-current="page">Отмена</a>
 
   <input form="create_new_appls_form" class="btn btn-success  col-auto  m-1" type="submit" value="Сохранить заявку">
 </div>
