--- a/public_html/HelloDjango/templates/extend/admin_app_for_driver.html
+++ b/public_html/HelloDjango/templates/extend/admin_app_for_driver.html
@@ -2,7 +2,7 @@
 
 {% block bottom_panel %}
 <div class="input-group d-flex justify-content-center align-items-center">
-<a href="{% url 'driver_app_list' CH_DAY  %}" class="btn btn-outline-primary active  col-auto m-1" aria-current="page">Назад</a>
-<a href="{% url 'show_today_applications' CH_DAY  %}" class="btn btn-outline-secondary active m-1" aria-current="page">Все заявки на {{ DAY }}</a>
+<a href="{% url 'driver_app_list' cw_day  %}" class="btn btn-outline-primary active  col-auto m-1" aria-current="page">Назад</a>
+<a href="{% url 'show_today_applications' cw_day  %}" class="btn btn-outline-secondary active m-1" aria-current="page">Все заявки на {{ DAY }}</a>
 </div>
 {% endblock %}
