--- a/public_html/HelloDjango/templates/today_applications.html
+++ b/public_html/HelloDjango/templates/today_applications.html
@@ -14,10 +14,10 @@
 
 
         </p>
-          {% if CH_DAY == 'next_day' %}
-      <a href="/today_app/today" class="btn btn-outline-secondary  position-absolute top-0 end-0 m-3" aria-current="page">Сегодня</a>
+          {% if cw_day == nw_day %}
+      <a href="/today_app/{{ lw_day }}" class="btn btn-outline-secondary  position-absolute top-0 end-0 m-3" aria-current="page">Сегодня</a>
         {% else %}
-          <a href="/today_app/next_day" class="btn btn-outline-secondary  position-absolute top-0 end-0 m-3" aria-current="page">Следующий день</a>
+          <a href="/today_app/{{ nw_day }}" class="btn btn-outline-secondary  position-absolute top-0 end-0 m-3" aria-current="page">Следующий день</a>
       {% endif %}
       </div>
     </div>
@@ -78,7 +78,7 @@
 
 
     {% if post == 'Администратор' %}
-    <a href="{% url 'application_list' CH_DAY %}" class="btn btn-primary col-auto  m-1" aria-current="page">Назад</a>
+    <a href="{% url 'application_list' cw_day %}" class="btn btn-primary col-auto  m-1" aria-current="page">Назад</a>
     <input form="priority_form" class="btn btn-success  col-auto   m-1" type="submit" value="Сохранить изменения">
         {% else %}
         <a href="/" class="btn btn-primary col-auto m-1" aria-current="page">Назад</a>
