--- a/public_html/HelloDjango/templates/extend/admin_application_foreman.html
+++ b/public_html/HelloDjango/templates/extend/admin_application_foreman.html
@@ -4,14 +4,14 @@
     <div class="container mt-3">
     <h3 class="text-center">{{ current_user.last_name }} {{ current_user.first_name }}</h3>
         <h3 class="text-center m-0">
-            {% if CH_DAY == 'next_day' %}
-                <a href="{% url 'application_list' current_user.id 'current_day' %}" class="btn " aria-current="page">
+            {% if cw_day == nw_day %}
+                <a href="{% url 'application_list' current_user.id lw_day %}" class="btn " aria-current="page">
                 Сегодня <
                 </a>
                 {{ DAY }}
             {% else %}
                 {{ DAY }}
-                <a href="{% url 'application_list' current_user.id 'next_day' %}" class="btn fw-light" aria-current="page">
+                <a href="{% url 'application_list' current_user.id nw_day %}" class="btn fw-light" aria-current="page">
                 > Следующий рабочий день
                 </a>
             {% endif %}
@@ -22,9 +22,9 @@
 
 {% block bottom_panel %}
 <div class="input-group d-flex justify-content-center align-items-center">
-<a href="{% url 'application_list' CH_DAY  %}" class="btn btn-outline-primary active  col-auto m-1" aria-current="page"><i class="fa-solid fa-list"></i> Все заявки</a>
+<a href="{% url 'application_list' cw_day  %}" class="btn btn-outline-primary active  col-auto m-1" aria-current="page"><i class="fa-solid fa-list"></i> Все заявки</a>
 
-<a href="{% url 'foreman_app_list' CH_DAY %}" class="btn btn-primary col-auto m-1" aria-current="page">Назад</a>
+<a href="{% url 'foreman_app_list' cw_day %}" class="btn btn-primary col-auto m-1" aria-current="page">Назад</a>
 
 
 </div>
