--- a/public_html/HelloDjango/templates/foreman_app_list.html
+++ b/public_html/HelloDjango/templates/foreman_app_list.html
@@ -4,14 +4,14 @@
 {% block choosedate %}
     <div class="container mt-3">
         <h3 class="text-center m-0">
-            {% if CH_DAY == 'next_day' %}
-                <a href="{% url 'foreman_app_list' 'current_day' %}" class="btn " aria-current="page">
+            {% if cw_day == nw_day %}
+                <a href="{% url 'foreman_app_list' lw_day %}" class="btn " aria-current="page">
                 Сегодня <
                 </a>
                 {{ DAY }}
             {% else %}
                 {{ DAY }}
-                <a href="{% url 'foreman_app_list' 'next_day' %}" class="btn fw-light" aria-current="page">
+                <a href="{% url 'foreman_app_list' nw_day %}" class="btn fw-light" aria-current="page">
                 > Следующий рабочий день
                 </a>
             {% endif %}
@@ -28,7 +28,7 @@
           <div class="card-body">
               <h5 class="card-title fw-bold" style="text-align: center">
 
-                  <a href="{% url 'application_list' fman.user.id CH_DAY  %}" class="btn btn-light border border-2" aria-current="page">
+                  <a href="{% url 'application_list' fman.user.id cw_day  %}" class="btn btn-light border border-2" aria-current="page">
                       <b>{{fman.user.last_name}} {{fman.user.first_name}}</b>
                   </a>
               </h5>
@@ -64,6 +64,6 @@
 
 {% block bottom_panel %}
 <div class="input-group d-flex justify-content-center align-items-center">
-  <a href="{% url 'application_list' CH_DAY  %}" class="btn btn-outline-primary active  col-auto m-1" aria-current="page">Назад</a>
+  <a href="{% url 'application_list' cw_day  %}" class="btn btn-outline-primary active  col-auto m-1" aria-current="page">Назад</a>
 </div>
 {% endblock %}
