--- a/public_html/HelloDjango/templates/tech_list.html
+++ b/public_html/HelloDjango/templates/tech_list.html
@@ -4,14 +4,14 @@
     <div class="container mt-3">
     <h3 class="text-center">{{ current_user.last_name }} {{ current_user.first_name }}</h3>
         <h3 class="text-center m-0">
-            {% if CH_DAY == 'next_day' %}
-                <a href="{% url 'tech_list'  'current_day' %}" class="btn " aria-current="page">
+            {% if cw_day == nw_day %}
+                <a href="{% url 'tech_list'  lw_day %}" class="btn " aria-current="page">
                 Сегодня <
                 </a>
                 {{ DAY }}
             {% else %}
                 {{ DAY }}
-                <a href="{% url 'tech_list'  'next_day' %}" class="btn fw-light" aria-current="page">
+                <a href="{% url 'tech_list'  nw_day %}" class="btn fw-light" aria-current="page">
                 > Следующий рабочий день
                 </a>
             {% endif %}
@@ -56,7 +56,7 @@
 
 {% block bottom_panel %}
 <div class="input-group d-flex justify-content-center align-items-center">
-<a href="{% url 'show_today_applications' CH_DAY  %}"  class="btn  btn-outline-secondary active" aria-current="page">Все заявки</a>
+<a href="{% url 'show_today_applications' cw_day  %}"  class="btn  btn-outline-secondary active" aria-current="page">Все заявки</a>
 
 {#<a href="" class="btn btn-primary col-auto m-1" aria-current="page">Назад</a>#}
 
