--- a/public_html/HelloDjango/templates/technic_driver.html
+++ b/public_html/HelloDjango/templates/technic_driver.html
@@ -5,10 +5,10 @@
     <div class="" >
       <div class="card-body row">
         <p class="card-text col"> <b class="fs-5">Техника на<br>{{ DAY }}</b> </p>
-        {% if CH_DAY == 'next_day' %}
-      <a href="{% url 'technic_driver' 'today' %}" class="col-auto btn btn-outline-secondary  position-absolute " style="margin-left: 200px;" aria-current="page">Список на сегодня</a>
+        {% if cw_day == nw_day %}
+      <a href="{% url 'technic_driver' lw_day %}" class="col-auto btn btn-outline-secondary  position-absolute " style="margin-left: 200px;" aria-current="page">Список на сегодня</a>
         {% else %}
-          <a href="{% url 'technic_driver' 'next_day' %}" class="col-auto btn btn-outline-secondary  position-absolute " style="margin-left: 200px;" aria-current="page">Список на следующий день</a>
+          <a href="{% url 'technic_driver' nw_day %}" class="col-auto btn btn-outline-secondary  position-absolute " style="margin-left: 200px;" aria-current="page">Список на следующий день</a>
       {% endif %}
 
 
