def fun cur staff

--- a/public_html/HelloDjango/templates/applications_for_driver.html
+++ b/public_html/HelloDjango/templates/applications_for_driver.html
@@ -51,7 +51,7 @@
 
 {% block bottom_panel %}
 <div class="input-group d-flex justify-content-center align-items-center">
-{% if post == 'Администратор' %}
+{% if post == 'admin' %}
     <a href="{% url 'driver_app_list' cw_day  %}" class="btn btn-outline-primary active  col-auto m-1" aria-current="page">Назад</a>
 {% endif %}
 
