--- a/public_html/HelloDjango/templates/components/user_menu.html
+++ b/public_html/HelloDjango/templates/components/user_menu.html
@@ -4,7 +4,7 @@
     </button>
     <ul class="dropdown-menu dropdown-menu-end dropdown-menu">
 
-        {% if post == 'Администратор' %}
+        {% if post == 'admin' %}
             <li><a class="dropdown-item" href="">Администратор</a></li>
             <hr>
             <li><a class="dropdown-item fw-bolder" href="{% url 'show_staff' %}">Персонал</a></li>
@@ -26,23 +26,23 @@
 
 
 
-        {% elif post == 'Прораб' or post == 'Мастер' %}
+        {% elif post == 'foreman' or post == 'master' %}
             <li><a class="dropdown-item" href="">Прораб</a></li>
             <hr>
             <li><a class="dropdown-item fw-bolder" href="{% url 'construction_sites' %}">Объекты</a></li>
 
-        {% elif post == 'Механик' %}
+        {% elif post == 'mechanic' %}
             <li><a class="dropdown-item" href="">Механик</a></li>
             <li><a class="dropdown-item fw-bolder" href="{% url 'tabel_driver' cw_day %}">Табель (Водители)</a></li>
 
             <li><a class="dropdown-item fw-bolder" href="{% url 'technic_driver' cw_day %}">Табель (Техника)</a></li>
 
 
-        {% elif post == 'Снабжение' %}
+        {% elif post == 'employee_supply' %}
             <li><a class="dropdown-item" href="">Снабжение</a></li>
 
 
-        {% elif post == 'Водитель' %}
+        {% elif post == 'driver' %}
             <li><a class="dropdown-item" href="">Водитель</a></li>
 
         {% endif %}
