--- a/public_html/HelloDjango/templates/main.html
+++ b/public_html/HelloDjango/templates/main.html
@@ -2,11 +2,11 @@
 
 
 {% block indicator %}
-{% if post == 'Администратор' %}
     {% if conflicts_vehicles_list %}<a href="{% url 'conflict_resolution' CH_DAY %}" class="btn btn-sm btn-danger ">Конфликты</a>
      {% elif not conflicts_vehicles_list and submitted_app_list %}<a href="{% url 'approv_all_applications' CH_DAY %}" class="btn btn-sm btn-success ">Одобрить все заявки</a>
+{% if post == 'admin' %}
     {% else %}{% endif %}
-{% elif post == 'Прораб' or 'Мастер' or 'Снабжение' %}
+{% elif post == 'foreman' or 'master' or 'employee_supply' %}
     {% if saved_app_list %}
     <a href="{% url 'submitted_all_applications' cw_day %}"  class="btn btn-sm btn-warning  " aria-current="page">Подать все заявки</a>
         {% endif %}
@@ -94,7 +94,7 @@
                 <a href="{% url 'show_info_application' a.app_today.id %}" class="btn btn-outline-primary  m-1" aria-current="page"><i class="fa-solid fa-circle-info"></i></a>
                 <a href="{% url 'add_application' a.app_today.id %}" class="btn btn-outline-primary  m-1" aria-current="page"><i class="fa-regular fa-pen-to-square"></i></a>
                 <a href="{% url 'clear_application' a.app_today.id %}" class="btn btn-outline-danger  m-1" aria-current="page"><i class="fa-solid fa-trash"></i></a>
-                {% if  a.app_today.status.status  == 'Сохранена' or post  == 'Администратор' and a.app_today.status.status  == 'Подана' %}
+                {% if  a.app_today.status.status  == 'Сохранена' or post  == 'admin' and a.app_today.status.status  == 'Подана' %}
 {#                    {% if not post == "Снабжение" %}#}
                 <a href="{% url 'success_application' a.app_today.id %}" class="btn btn-outline-success  m-1" aria-current="page"><i class="fa-solid fa-check"></i></a>
 {#                    {% endif %}#}
@@ -117,7 +117,7 @@
     </div>
     </div>
 
-    {% if post == 'Администратор' %}
+    {% if post == 'admin' %}
     <div class="driver_panel container col-auto   position-fixed end-0 "style="margin-top: -70px; height: 90vh;" {% if var_drv_panel.value == user.id|slugify and var_drv_panel.flag %} hidden="" {% endif %}>
         <div class="card-body  overflow-auto "style="height: 90%" >
 
@@ -172,7 +172,7 @@
 
     <a href="{% url 'show_today_applications' cw_day  %}"  class="btn  btn-outline-secondary active" aria-current="page">Все заявки</a>
 </div>
-    {% if post == 'Администратор' %}
+    {% if post == 'admin' %}
     <button role="button" class="btn_driver_panel btn btn-outline-light  col-auto position-absolute end-0 m-2" onclick="
         let f;
             if($('.driver_panel').is(':hidden')){
