hide save button

--- a/public_html/HelloDjango/templates/tabel_driver.html
+++ b/public_html/HelloDjango/templates/tabel_driver.html
@@ -65,6 +65,6 @@
 <div class="input-group d-flex justify-content-center align-items-center">
   <a href="{% url 'start_page'  %}" class="btn btn-outline-primary active  col-auto m-1" aria-current="page">Назад</a>
 
-  <input form="drivers_form" class="btn btn-success  col-auto " type="submit" value="Сохранить">
+{#  <input form="drivers_form" class="btn btn-success  col-auto " type="submit" value="Сохранить">#}
 </div>
 {% endblock %}
