--- a/public_html/HelloDjango/templates/technic_driver.html
+++ b/public_html/HelloDjango/templates/technic_driver.html
@@ -70,7 +70,7 @@
 <div class="input-group d-flex justify-content-center align-items-center">
   <a href="{% url 'start_page'  %}" class="btn btn-outline-primary active  col-auto m-1" aria-current="page">Назад</a>
 
-{#  <input form="technic_driver_form" class="btn btn-success  col-auto " type="submit" value="Сохранить">#}
+  <input form="technic_driver_form" class="btn btn-success  col-auto " type="submit" value="Сохранить">
 </div>
 {% endblock %}
 <script type="text/javascript">
