--- a/public_html/HelloDjango/templates/edit_staff.html
+++ b/public_html/HelloDjango/templates/edit_staff.html
@@ -32,7 +32,7 @@
             <input type="text"  class="form-control" name="telephone" value="{{ current_post.telephone }}">
         </div>
 
-        <div class="mt-3">
+        <div class="mt-3"  {% if not post == 'admin' %}hidden {% endif %}>
             <label>Должность</label>
             <input type="hidden" id="io_post" value="{{ current_post }}">
             <select class=" col-auto" required id="post_select" name="post">
@@ -41,10 +41,10 @@
                         {% endfor %}
             </select>
         </div>
-        <div class="mt-3 cl_foreman" >
+        <div class="mt-3 cl_foreman"  {% if not post == 'admin' %}hidden {% endif %}>
             <label>Прораб</label>
             <input type="hidden" name="foreman" id="io_foreman" value="{{ current_foreman }}">
-            <select class=" col-auto" id="foreman_select">
+            <select  class=" col-auto" id="foreman_select">
                         {% for foreman in foreman_list %}
                             <option value="{{ foreman.0 }}">{{ foreman.1 }} {{ foreman.2 }}</option>
                         {% endfor %}
