--- a/public_html/HelloDjango/templates/edit_staff.html
+++ b/public_html/HelloDjango/templates/edit_staff.html
@@ -65,7 +65,11 @@
 
 {% block bottom_panel %}
 <div class="input-group d-flex justify-content-center align-items-center">
+{% if post == 'admin' %}
   <a href="{% url 'show_staff' %}" class="btn btn-outline-primary active  col-auto m-1" aria-current="page">Отмена</a>
+{% else %}
+    <a href="{% url 'start_page' %}" class="btn btn-outline-primary active  col-auto m-1" aria-current="page">Отмена</a>
+{% endif %}
   <a href="{% url 'del_staff' current_user.id %}" class="btn btn-outline-danger  col-auto m-1" aria-current="page">Удалить</a>
   <button form="edit_staff_form" type="submit" class="btn btn-success m-1">Сохранить</button>
 
