fix: drv_app_list

--- a/public_html/HelloDjango/templates/driver_app_list.html
+++ b/public_html/HelloDjango/templates/driver_app_list.html
@@ -36,16 +36,12 @@
                 <hr>
               <h6 class="card-text fw-bold">{{ a.technic_driver.technic.name.name }}</h6>
                 <h6 class="card-text"><b>{{ a.priority }})</b> {{ a.app_for_day.construction_site.address }} ({{a.app_for_day.construction_site.foreman.user.last_name}})</h6>
-                <h6 class="card-text"></h6>
+                {% if a.description %}
                 <textarea class="form-control app_description" readonly>{{ a.description }}</textarea>
-                <h6 class="card-text"></h6>
-                <h6 class="card-text"></h6>
+                {% endif %}
 
             {% endfor %}
 
-{#            <div class="btn-group ">#}
-{#                <a href="{% url 'application_for_driver' CH_DAY drv.driver.user.id %}" class="btn btn-outline-primary m-1" aria-current="page"><i class="fa-solid fa-circle-info"></i></a>#}
-{#            </div>#}
           </div>
         </div>
         </div>
