--- a/public_html/HelloDjango/templates/main.html
+++ b/public_html/HelloDjango/templates/main.html
@@ -16,18 +16,16 @@
 {% block content %}
 
     {% block choosedate %}
-    <div class="container mt-3">
-        <h3 class="text-center m-0">
+    <div class="container-fluid  ">
+        <h3 class="btn-group position-absolute start-50 translate-middle">
             {% if cw_day == nw_day %}
-                <a href="{% url 'application_list' lw_day %}" class="btn " aria-current="page">
-                Сегодня <
-                </a>
-                {{ DAY }}
+                <a href="{% url 'application_list' lw_day %}" class="btn fw-light" aria-current="page">Сегодня <</a>
+                <input class="form-control " type="date" style="width: 50px;" />
+                <div class="ms-2">{{ DAY }}</div>
             {% else %}
-                {{ DAY }}
-                <a href="{% url 'application_list' nw_day %}" class="btn fw-light" aria-current="page">
-                > Следующий рабочий день
-                </a>
+                <div class="me-2">{{ DAY }}</div>
+                <input class="form-control" type="date" style="width: 50px;" />
+                <a href="{% url 'application_list' nw_day %}" class="btn fw-light" aria-current="page">> Следующий рабочий день</a>
             {% endif %}
 
         </h3>
