fix first page for admin

--- a/public_html/HelloDjango/templates/technic_driver.html
+++ b/public_html/HelloDjango/templates/technic_driver.html
@@ -21,7 +21,7 @@
       <th scope="col">Работает</th>
       <th scope="col">Название техники</th>
       <th scope="col">ид. №</th>
-      <th scope="col">Водитель</th>
+      <th scope="col">Водитель на {{ DAY }}</th>
 
       <th scope="col" hidden>id</th>
 
