add choice day app

--- a/public_html/HelloDjango/templates/main.html
+++ b/public_html/HelloDjango/templates/main.html
@@ -19,13 +19,13 @@
     <div class="container-fluid  ">
         <h3 class="btn-group position-absolute start-50 translate-middle">
             {% if cw_day == nw_day %}
-                <a href="{% url 'application_list' lw_day %}" class="btn fw-light" aria-current="page">Сегодня <</a>
-                <input class="form-control " type="date" style="width: 50px;" />
-                <div class="ms-2">{{ DAY }}</div>
+                <a href="{% url 'application_list' lw_day %}" class="btn fw-light text-nowrap" aria-current="page">{{ lw_day }} <</a>
+                <input class="form-control io_current_day" type="date" style="width: 50px;"  value=""/>
+                <div class="ms-2 text-nowrap">{{ DAY }}</div>
             {% else %}
-                <div class="me-2">{{ DAY }}</div>
-                <input class="form-control" type="date" style="width: 50px;" />
-                <a href="{% url 'application_list' nw_day %}" class="btn fw-light" aria-current="page">> Следующий рабочий день</a>
+                <div class="me-2 text-nowrap io_current_day">{{ DAY }}</div>
+                <input class="form-control io_current_day" type="date" style="width: 50px;" value=""/>
+                <a href="{% url 'application_list' nw_day %}" class="btn fw-light text-nowrap" aria-current="page">> {{ nw_day }}</a>
             {% endif %}
 
         </h3>
