--- a/public_html/HelloDjango/templates/show_info_application.html
+++ b/public_html/HelloDjango/templates/show_info_application.html
@@ -34,7 +34,7 @@
 
 {% block bottom_panel %}
 <div class="input-group d-flex justify-content-center align-items-center">
-    <a href="{% url 'application_list' CH_DAY  %}" class="btn btn-outline-primary active  col-auto m-1" aria-current="page"><i class="fa-solid fa-list"></i> Все заявки</a>
+    <a href="{% url 'application_list' cw_day  %}" class="btn btn-outline-primary active  col-auto m-1" aria-current="page"><i class="fa-solid fa-list"></i> Все заявки</a>
     <a href="{% url 'clear_application' application_id %}" class="btn btn btn-danger   col-auto m-1" aria-current="page">Отчистить</a>
     <a href="{% url 'add_application' application_id %}" class="btn btn-primary  col-auto m-1" aria-current="page"><i class="fa-regular fa-pen-to-square"></i> Редактировать</a>
 </div>
