--- a/public_html/HelloDjango/templates/applications_for_driver.html
+++ b/public_html/HelloDjango/templates/applications_for_driver.html
@@ -32,7 +32,7 @@
         <ul class="container-fluid" >
             {% for v in applications %}
                 <div class=" mb-3" id="vehicle_list">
-                    <label  class= "fw-bold start-50">{{ v.priority }}) - {{ v.app_for_day.construction_site.address }} ({{ v.app_for_day.construction_site.foreman }})</label>
+                    <label  class= "fw-bold start-50">{{ v.priority }}){% if v.app_for_day.construction_site.address %} - {{ v.app_for_day.construction_site.address }} ({{ v.app_for_day.construction_site.foreman }}){% endif %}</label>
                     <textarea class="form-control app_description mb-2" id="floatingInputValue" disabled rows="1">{{ v.description }}</textarea>
                 </div>
             {% endfor %}
